@@ -1,3 +1,11 @@
+2004-09-21  Boris Kolpackov  <boris@kolpackov.net>
+
+	* run_make_tests.pl: Change `#!/usr/local/bin/perl' to be
+	`#!/usr/bin/env perl'.
+	
+	* scripts/features/implicit_prereq_eval: Test implicit rule
+	prerequisite evaluation code.
+
 2004-09-21  Paul D. Smith  <psmith@gnu.org>
 
 	* run_make_tests.pl (run_make_test): Enhance to allow the make
